--- a/web.config
+++ b/web.config
@@ -1,11 +1,11 @@
-<?xml version="1.0"?>
- 
+<?xml version="1.0" ?>
 <configuration>
     <system.webServer>
         <staticContent>
-         <mimeMap fileExtension=".svg" mimeType="image/svg+xml" />
-         <mimeMap fileExtension=".woff" mimeType="application/x-woff" />
-         <mimeMap fileExtension=".ttf" mimeType="application/x-woff" />
-     </staticContent>
+            <mimeMap fileExtension=".svg" mimeType="image/svg+xml" />
+            <mimeMap fileExtension=".woff" mimeType="application/x-woff" />
+            <mimeMap fileExtension=".ttf" mimeType="application/x-woff" />
+            <mimeMap fileExtension=".json" mimeType="application/json" />
+        </staticContent>
     </system.webServer>
-</configuration> 
+</configuration>
