Putting web.config back like it should be

--- a/web.config
+++ b/web.config
@@ -2,7 +2,10 @@
 <configuration>
     <system.webServer>
         <staticContent>
-
+            <mimeMap fileExtension=".svg" mimeType="image/svg+xml" />
+            <mimeMap fileExtension=".woff" mimeType="application/x-woff" />
+            <mimeMap fileExtension=".ttf" mimeType="application/x-woff" />
+            <mimeMap fileExtension=".json" mimeType="application/json" />
         </staticContent>
     </system.webServer>
 </configuration>
