Updated dts files, web.config, and remaining samples

--- a/web.config
+++ b/web.config
@@ -2,9 +2,13 @@
 <configuration>
     <system.webServer>
         <staticContent>
+            <remove fileExtension=".svg" />
             <mimeMap fileExtension=".svg" mimeType="image/svg+xml" />
+            <remove fileExtension=".woff" />
             <mimeMap fileExtension=".woff" mimeType="application/x-woff" />
+            <remove fileExtension=".ttf" />
             <mimeMap fileExtension=".ttf" mimeType="application/x-woff" />
+            <remove fileExtension=".json" />
             <mimeMap fileExtension=".json" mimeType="application/json" />
         </staticContent>
     </system.webServer>
